# OpenReward

./: LICENSE  README.md  pyproject.toml
src/openreward/: __init__.py  thinking_format_reward.py
src/openreward/examples/trl_grpo/: skypilot.yaml  trl_grpo.py
src/openreward/integrations/: trl.py  verl.py
src/openreward/rewards/: composite_reward.py  countdown_reward.py  math_verify_reward.py  reward.py  thinking_format_reward.py
src/openreward/tests/: test_composite_reward.py  test_countdown_reward.py  test_math_verify_reward.py  test_parse_chat.py  test_reward.py  test_thinking_format_reward.py
src/openreward/types/: chat.py
src/openreward/utils/: load_reward.py
