[project]
name = "openreward"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Kerr", email = "maxrmk@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
]

[project.scripts]
openreward = "openreward:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
